--- a/docker/requirements-docker.txt
+++ b/docker/requirements-docker.txt
@@ -23,6 +23,9 @@ psutil==5.9.6
 google-generativeai==0.8.3
 openai==1.54.0
 
+# Async HTTP client
+aiohttp
+
 # Web scraping (optional)
 beautifulsoup4
 
