Fix: API token/key not recognized in Docker - Remove broken file mount causing directory conflict - Add env var fallback for Docker (GEMINI/OPENAI/SERPER) - Sync all API keys to os.environ on save - Handle xiaozhi_endpoints.json directory bug - Auto-create config on Docker first run

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,7 +36,7 @@ COPY config_manager.py .
 
 # Tạo thư mục cho data, logs và config
 # xiaozhi_endpoints.json sẽ tự tạo runtime, static/templates embedded trong xiaozhi_final.py
-RUN mkdir -p /app/data /app/logs /app/static /app/templates
+RUN mkdir -p /app/data /app/logs /app/static /app/templates /app/config
 
 # Non-root user cho security
 RUN useradd --create-home --shell /bin/bash appuser \
